<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:text="@string/score_text"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/question_count_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_text_view"
        android:freezesText="true"
        android:text="@string/question_text"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/difficulty_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_count_text_view"
        android:freezesText="true"
        android:text="@string/difficulty_text_view"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/category_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/difficulty_text_view"
        android:freezesText="true"
        android:text="@string/category_text_view"
        android:textColor="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/countdown_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:freezesText="true"
        android:text="@string/countdown_text"
        android:textColor="@color/colorTextPrimary"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_marginBottom="16dp"
        android:freezesText="true"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp"
        tools:text="Here will be the question text" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            tools:text="Option 1" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            tools:text="Option 2" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            tools:text="Option 3" />

    </RadioGroup>

    <Button
        android:id="@+id/confirm_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:freezesText="true"
        android:text="@string/confirm_button" />
</RelativeLayout>